syntax = "proto3";

package booking;

option go_package="../pb";

service BookingService {
    rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);
    rpc GetBooking(GetBookingRequest) returns (GetBookingResponse);
    rpc UpdateBooking(UpdateBookingRequest) returns (UpdateBookingResponse);
    rpc DeleteBooking(DeleteBookingRequest) returns (DeleteBookingResponse);
    rpc ListBookings(ListBookingsRequest) returns (ListBookingsResponse);
}

message CreateBookingRequest {
    string user_id = 1;
    string room_id = 2;
    string checkin_date = 3;
    string checkout_date = 4;
}

message CreateBookingResponse {
    string booking_id = 1;
}

message GetBookingRequest {
    string booking_id = 1;
}

message GetBookingResponse {
    Booking booking = 1;
}

message UpdateBookingRequest {
    string booking_id = 1;
    Booking booking = 2;
}

message UpdateBookingResponse {
    string booking_id = 1;
}

message DeleteBookingRequest {
    string booking_id = 1;
}

message DeleteBookingResponse {
    string booking_id = 1;
}

message ListBookingsRequest {
    string user_id = 1;
}

message ListBookingsResponse {
    repeated Booking bookings = 1;
}

message Booking {
    string booking_id = 1;
    string user_id = 2;
    string room_id = 3;
    string checkin_date = 4;
    string checkout_date = 5;
    string status = 6;
    string created_at = 7;
    string updated_at = 8;
}
